--- a/projeto-tecweb.html
+++ b/projeto-tecweb.html
@@ -38,7 +38,7 @@
 
 	<div align="center">
 			
-		<!-- script inline de data (dia, mes e ano) -->
+		<!-- #script inline de data (dia, mes e ano) -->
 
 		<script>
 				
